power: rename NMSleepMonitor to NMPowerMonitor
In order to provide the NMSleepMonitor a more generic usage, let's
rename the whole module to NMPowerMonitor. Nothing is exposed to the API
so it is a trivial renaming.

--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -171,7 +171,7 @@ libNetworkManager = static_library(
     'nm-policy.c',
     'nm-rfkill-manager.c',
     'nm-session-monitor.c',
-    'nm-sleep-monitor.c',
+    'nm-power-monitor.c',
     'nm-priv-helper-call.c',
   ),
   dependencies: nm_deps,
