power: remove monitoring of upower signals
UPower "Sleeping" and "Resuming" signals were dropped long ago [1].
Therefore we are also dropping the support of it.

[1] https://lists.freedesktop.org/archives/devkit-devel/2014-March/001575.html

--- a/configure.ac
+++ b/configure.ac
@@ -510,7 +510,7 @@ fi
 session_tracking="$(printf '%s' "${session_tracking}" | sed 's/^, //')"
 
 AC_ARG_WITH(suspend-resume,
-            AS_HELP_STRING([--with-suspend-resume=upower|systemd|elogind|consolekit],
+            AS_HELP_STRING([--with-suspend-resume=systemd|elogind|consolekit],
                            [Build NetworkManager with specific suspend/resume support]))
 if test "z$with_suspend_resume" = "z"; then
 	PKG_CHECK_EXISTS([libsystemd >= 209], [have_systemd_inhibit=yes],
@@ -525,21 +525,13 @@ if test "z$with_suspend_resume" = "z"; then
 			# Use elogind if it's new enough
 			with_suspend_resume="elogind"
 		else
-			if test "$use_consolekit" = "yes"; then
-				# Use consolekit suspend if session tracking is consolekit
-				with_suspend_resume="consolekit"
-			else
-				# Fall back to upower
-				with_suspend_resume="upower"
-			fi
+			# Fallback to consolekit
+			with_suspend_resume="consolekit"
 		fi
 	fi
 fi
 
 case $with_suspend_resume in
-	upower)
-		AC_DEFINE([SUSPEND_RESUME_UPOWER], 1, [Define to 1 to use UPower suspend api])
-		;;
 	systemd)
 		PKG_CHECK_MODULES(SYSTEMD_INHIBIT, [libsystemd >= 209],,
 		                  [PKG_CHECK_MODULES(SYSTEMD_INHIBIT, [libsystemd-login >= 183])])
@@ -554,7 +546,7 @@ case $with_suspend_resume in
 		AC_DEFINE([SUSPEND_RESUME_CONSOLEKIT], 1, [Define to 1 to use ConsoleKit2 suspend api])
 		;;
 	*)
-		AC_MSG_ERROR(--with-suspend-resume must be one of [upower, systemd, elogind, consolekit])
+		AC_MSG_ERROR(--with-suspend-resume must be one of [systemd, elogind, consolekit])
 		;;
 esac
 
