libnmc: get enum gtype for enum properties implemented as int
In nm-meta-setting-desc we were getting the enum type from the
GSpecParam for those properties implemented as enum. For properties
implemented as int but exposed to nmcli as enum, we needed to set
get_gtype to define the enum type.

Properties defined as direct_enum are implemented as integer but have an
associated enum type. Use it in nm-meta-setting-desc.

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -769,7 +769,7 @@
                   />
         <property name="autoconnect-ports"
                   dbus-type="i"
-                  gprop-type="NMTernary"
+                  gprop-type="gint"
                   />
         <property name="autoconnect-priority"
                   dbus-type="i"
