build: use "-Wno-nonnull-compare" for building systemd
systemd uses that too. We cannot enable compiler warnings that
upstream doesn't want to support.

See-also: https://github.com/systemd/systemd/commit/b59bce308df746e1793b134db7fec4c298ed1f61
(cherry picked from commit ad22a96da9ae1dc3ad85ce01e9fe7fe0b49e2bc5)
(cherry picked from commit 4c66cce980ca774d32f0a0227eb4cdcfc4ac903f)
(cherry picked from commit 24363ade546e723eef6daa3b12795f490bb77499)
(cherry picked from commit 1673c995d9b2e8efa5038124c03c65434d22dd0d)

--- a/src/libnm-systemd-core/meson.build
+++ b/src/libnm-systemd-core/meson.build
@@ -30,6 +30,7 @@ libnm_systemd_core = static_library(
     top_inc,
     src_inc,
   ],
+  c_args: libnm_systemd_common_cflags,
   dependencies: [
     libnm_systemd_shared_dep_inc,
     glib_dep,
