build: use "-Wno-nonnull-compare" for building systemd
systemd uses that too. We cannot enable compiler warnings that
upstream doesn't want to support.

See-also: https://github.com/systemd/systemd/commit/b59bce308df746e1793b134db7fec4c298ed1f61
(cherry picked from commit ad22a96da9ae1dc3ad85ce01e9fe7fe0b49e2bc5)
(cherry picked from commit 4c66cce980ca774d32f0a0227eb4cdcfc4ac903f)

--- a/configure.ac
+++ b/configure.ac
@@ -1162,7 +1162,11 @@ fi
 
 NM_COMPILER_WARNINGS(AM_CFLAGS, ${more_warnings_default})
 
-NM_COMPILER_WARNING_FLAG(LIBSYSTEMD_NM_CFLAGS, "-Wno-gnu-variable-sized-type-not-at-end")
+for w in \
+    -Wno-nonnull-compare \
+    ; do
+    NM_COMPILER_WARNING_FLAG(LIBSYSTEMD_NM_CFLAGS, "$w")
+done
 AC_SUBST(LIBSYSTEMD_NM_CFLAGS)
 
 CC_CHECK_FLAGS_APPEND([with_cflags], [CFLAGS], [\
