build: workaround -Wno-calloc-transposed-args warning in systemd code
Upstream systemd fixed this compiler warning. What really needs to be
done, is re-importing the upstream code.

In the meantime, suppress the warning that hits on GCC 14.

This is a temporary workaround!

See-also: https://github.com/systemd/systemd/commit/fdd84270df0062fad68783eea8b51a6ed87b67cd
(cherry picked from commit b1016e3be80b1e610b84eba527c95bbb9c5971f4)
(cherry picked from commit df879e6950fc273b89fb51be92f9081ae715f346)
(cherry picked from commit fd63580c7cf6207f841a8a948d660a58e35bf605)
(cherry picked from commit 5f4dad89a909f989c14a3ffdbddeffca543f8485)

--- a/src/meson.build
+++ b/src/meson.build
@@ -73,6 +73,7 @@ libnm_systemd_common_cflags = [ ]
 
 libnm_systemd_common_cflags += cc.get_supported_arguments([
   '-Wno-nonnull-compare',
+  '-Wno-calloc-transposed-args',
 ])
 
 ###############################################################################
