build: workaround -Wno-calloc-transposed-args warning in systemd code
Upstream systemd fixed this compiler warning. What really needs to be
done, is re-importing the upstream code.

In the meantime, suppress the warning that hits on GCC 14.

This is a temporary workaround!

See-also: https://github.com/systemd/systemd/commit/fdd84270df0062fad68783eea8b51a6ed87b67cd

--- a/configure.ac
+++ b/configure.ac
@@ -1159,6 +1159,7 @@ NM_COMPILER_WARNINGS(AM_CFLAGS, ${more_warnings_default})
 
 for w in \
     -Wno-nonnull-compare \
+    -Wno-calloc-transposed-args \
     ; do
     NM_COMPILER_WARNING_FLAG(LIBSYSTEMD_NM_CFLAGS, "$w")
 done
