--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -1876,6 +1876,10 @@
                   dbus-type="i"
                   gprop-type="gint"
                   />
+        <property name="offload"
+                  dbus-type="i"
+                  gprop-type="gint"
+                  />
         <property name="parent"
                   dbus-type="s"
                   gprop-type="gchararray"
