build: use only booleans in a set10 method
Fixes the following deprecation warning:

meson.build:585: DEPRECATION: configuration_data.set10
with number. the `set10` method should only be used with booleans

--- a/meson.build
+++ b/meson.build
@@ -556,12 +556,12 @@ config_h.set10('WITH_FIREWALLD_ZONE', enable_firewalld_zone)
 
 # pppd
 enable_ppp = get_option('ppp')
-NM_PPP_VERSION_2_5_OR_NEWER = 0
+NM_PPP_VERSION_2_5_OR_NEWER = false
 if enable_ppp
   pppd_dep = dependency('pppd', required: false)
   if (pppd_dep.found())
     pppd_version = pppd_dep.version()
-    NM_PPP_VERSION_2_5_OR_NEWER = 1
+    NM_PPP_VERSION_2_5_OR_NEWER = true
   else
     assert(cc.has_header('pppd/pppd.h'), 'couldn\'t find pppd.h. pppd development headers are required')
     pppd_version = '2.4.9'
