WIP: support ethtool Forward Error Correction(fec)
Signed-off-by: Gris Ge <fge@redhat.com>

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -1340,6 +1340,10 @@
                   dbus-type="u"
                   is-setting-option="1"
                   />
+        <property name="fec"
+                  dbus-type="u"
+                  is-setting-option="1"
+                  />
     </setting>
     <setting name="generic"
              gtype="NMSettingGeneric"
