--- a/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
+++ b/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
@@ -1078,6 +1078,10 @@
         <property name="channels-combined"
                   format="integer"
                   values="0 - 4294967295" />
+        <property name="fec"
+                  format="flags (NMEthtoolFec)"
+                  nmcli-description="The Forward Error Correction(FEC) encoding modes to set. Not all devices support all options. May be any combination of &quot;auto&quot; (0x2), &quot;off&quot; (0x4), &quot;rs&quot; (0x8), &quot;baser&quot; (0x10), &quot;llrs&quot; (0x20)"
+                  values="auto(0x2), off(0x4), rs(0x8), baser(0x10), llrs(0x20)"/>
     </setting>
     <setting name="generic" >
         <property name="device-handler"
