meson: autodetect Qt dependencies
Configuring the build directory with meson often fails if you don't have
the right Qt dependencies. As they are used only to build some examples,
it is better to autodetect them and, if present, then build the
examples but skip them otherwise.

Still accept forcing qt=true or qt=false as before.

Note that there is a option type called "feature" whose purpose is to
support exactly this: features with enable/disable/auto possible values:
https://mesonbuild.com/Build-options.html#features.  However, they don't
accept true/false values so scripts using qt=true/false would start
failing. Since meson 0.60 the "deprecated" argument can be used for
options (https://mesonbuild.com/Build-options.html#deprecated-options),
but that's a too new version of meson.

Also, this fixes some Gitlab-CI failures that happen when generating the
tarball with make distcheck or meson dist. This is because it tries to
check that the tarball content can be configured and built, but it uses
the default configurations so it was using qt=yes. Now it will use
qt=auto, avoiding the failure.

Fixes: 61f0531509e5 ('gitlab-ci: test re-buildability of distribution tarballs')

--- a/meson.build
+++ b/meson.build
@@ -961,14 +961,17 @@ test(
 subdir('examples/C/glib')
 
 enable_qt = get_option('qt')
-if enable_qt
-  add_languages('cpp')
+if enable_qt != 'false'
+  qt_core_dep = dependency('QtCore', version: '>= 4', required: enable_qt == 'yes')
+  qt_dbus_dep = dependency('QtDBus', required: enable_qt == 'yes')
+  qt_network_dep = dependency('QtNetwork', required: enable_qt == 'yes')
 
-  qt_core_dep = dependency('QtCore', version: '>= 4')
-  qt_dbus_dep = dependency('QtDBus')
-  qt_network_dep = dependency('QtNetwork')
-
-  subdir('examples/C/qt')
+  # If enable_qt=='yes' we have all the dependencies. If it's 'auto', skip
+  # building the Qt examples if any dependency is missing.
+  if qt_core_dep.found() and qt_dbus_dep.found() and qt_network_dep.found()
+    add_languages('cpp')
+    subdir('examples/C/qt')
+  endif
 endif
 
 if enable_docs
