--- a/meson_options.txt
+++ b/meson_options.txt
@@ -74,5 +74,5 @@ option('valgrind_suppressions', type: 'string', value: '', description: 'Use spe
 option('ld_gc', type: 'boolean', value: true, description: 'Enable garbage collection of unused symbols on linking')
 option('libpsl', type: 'boolean', value: true, description: 'Link against libpsl')
 option('crypto', type: 'combo', choices: ['nss', 'gnutls', 'null'], value: 'nss', description: 'Cryptography library to use for certificate and key operations')
-option('qt', type: 'boolean', value: true, description: 'enable Qt examples')
+option('qt', type: 'combo', choices: ['auto', 'true', 'false'], value: 'auto', description: 'enable Qt examples')
 option('readline', type: 'combo', choices: ['auto', 'libreadline', 'libedit', 'none'], description: 'Using readline (auto) or libedit)')
