meson: replace deprecated dep.get_pkgconfig_variable
Replaced by dep.get_variable:
https://mesonbuild.com/Reference-manual_returned_dep.html#depget_variable

This get rid of the following deprecation warning:
  NOTICE: Future-deprecated features used:
   * 0.56.0: {'dependency.get_pkgconfig_variable'}

--- a/examples/C/qt/meson.build
+++ b/examples/C/qt/meson.build
@@ -8,7 +8,7 @@ examples = [
 
 moc = find_program('moc-qt4', required: false)
 if not moc.found()
-  moc = qt_core_dep.get_pkgconfig_variable('moc_location')
+  moc = qt_core_dep.get_variable(pkgconfig: 'moc_location')
 endif
 
 example = 'monitor-nm-running'
